<?xml version="1.0" encoding="utf-8"?>
<!--    parent layout-->
<!--style set to scroll view for dark/light mode-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <!--team titles layout
        used weightsum=1 to divide the layout in equal parts with value .5 for each text view-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:text="@string/team_a" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:text="@string/team_b" />

        </LinearLayout>

        <!--plus btn-->
        <Button
            android:id="@+id/plusBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/plus_sign" />

        <!--marks textview and switch-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:weightSum="1"
            android:padding="10dp">

<!--            inline style-->
            <TextView
                android:id="@+id/team_a_scoreTV"
                android:text="@string/zero"
                style="@style/myTextViewStyle.myLabel" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/on_offSC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight=".2"
                android:checked="true" />

<!--            inline style-->
            <TextView
                android:id="@+id/team_b_scoreTV"
                android:text="@string/zero"
                style="@style/myTextViewStyle.myLabel"/>

        </LinearLayout>

        <!--minus btn-->
        <Button
            android:id="@+id/minusBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/minus_sign" />

        <!--radio group containing 4 score values-->
        <RadioGroup
            android:id="@+id/pointRG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

<!--            inline style-->
            <RadioButton
                android:id="@+id/point2RB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MyRadioButton"
                android:checked="true"
                android:text="@string/points_2" />

<!--            inline style-->
            <RadioButton
                android:id="@+id/point4RB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                style="@style/MyRadioButton"
                android:text="@string/points_4" />

<!--            inline style-->
            <RadioButton
                android:id="@+id/point6RB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                style="@style/MyRadioButton"
                android:text="@string/points_6" />

<!--            inline style-->
            <RadioButton
                android:id="@+id/point8RB"
                android:layout_width="wrap_content"
                style="@style/MyRadioButton"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/points_8" />

        </RadioGroup>

    </LinearLayout>

</ScrollView>